--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         <section class="bg-blue-200 w-9/12 mx-auto mt-12 p-8">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-3 px-3" type="email" name="" id="" placeholder="Enter Your Email">
-                <input class="w-9/12 block mb-3 px-3" type="password" name="" id="" placeholder="Enter Your Passwoed">
-                <button class="bg-sky-500 hover:bg-sky-700 px-7 py-2 text-white font-medium rounded-lg">Submit</button>
+                <input class="w-9/12 block mb-3 px-3" type="email" name="" id="user-email"
+                    placeholder="Enter Your Email">
+                <input class="w-9/12 block mb-3 px-3" type="password" name="" id="user-password" 
+                    placeholder="Enter Your Passwoed">
+                <button id="btn-submit" class="bg-sky-500 hover:bg-sky-700 px-7 py-2 text-white font-medium rounded-lg">Submit</button>
             </div>
         </section>
     </main>
 
+    <!-- script  -->
+    <script src="js/login.js"></script>
 </body>
 </html>
