--- a/bank.html
+++ b/bank.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="bg-yellow-400 p-8 rounded-xl">
                     <h4 class="text-3xl">Withdraw</h4>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$<span id="withdraw-total">00</span></h2>
                 </div>
                 <div class="bg-violet-400 p-8 rounded-xl">
                     <h4 class="text-3xl">Balance</h4>
@@ -56,6 +56,7 @@
 
     <!-- script  -->
     <script src="js/deposite.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 
 </html>
