--- a/bank.html
+++ b/bank.html
@@ -51,11 +51,10 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <!-- script  -->
-    <script src="js/deposite.js"></script>
+    <script src="js/deposit.js"></script>
     <script src="js/withdraw.js"></script>
 </body>
 
