--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <section class="bg-blue-200 w-9/12 mx-auto mt-12 p-8">
+        <section class="bg-blue-200 w-9/12 mx-auto mt-12 p-8 rounded">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
                 <input class="w-9/12 block mb-3 px-3" type="email" name="" id="user-email"
